fix/web/(menu-item): 修复渲染为a标签时没有文本溢出和collapsed时点击范围问题、icon被压缩问题 (#1772)
* fix(MenuItem): 修复渲染为a标签时没有文本溢出的问题、collapsed时a标签覆盖范围未铺满按钮的问题

* fix(MenuItem): 文本溢出时icon被压缩大小的问题

--- a/style/web/components/menu/_index.less
+++ b/style/web/components/menu/_index.less
@@ -147,6 +147,7 @@ a.@{prefix}-menu__item {
         justify-content: center;
 
         .@{prefix}-menu__item-link {
+          margin-left: 0;
           opacity: 0;
           content: "";
           position: absolute;
@@ -369,6 +370,7 @@ a.@{prefix}-menu__item {
     .t-icon {
       width: 20px;
       height: 20px;
+      flex-shrink: 0;
     }
 
     .@{prefix}-fake-arrow {
@@ -567,6 +569,9 @@ a.@{prefix}-menu__item {
 
       &.@{prefix}-menu__item-link {
         color: unset;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
 
         &::before {
           content: "";
